# sv-parser

./: .gitignore  CHANGELOG.md  COPYRIGHT  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  release.toml
sv-parser/: Cargo.toml  build.rs
sv-parser-derive/: Cargo.toml
sv-parser-derive/src/: lib.rs
sv-parser-error/: Cargo.toml
sv-parser-error/src/: lib.rs
sv-parser-macros/: Cargo.toml
sv-parser-macros/src/: lib.rs
sv-parser-parser/: Cargo.toml
sv-parser-parser/src/: keywords.rs  lib.rs  tests.rs  utils.rs
sv-parser-parser/src/behavioral_statements/: assertion_statements.rs  case_statements.rs  clocking_block.rs  conditional_statements.rs  continuous_assignment_and_net_alias_statements.rs  looping_statements.rs  mod.rs  parallel_and_sequential_blocks.rs  patterns.rs  procedural_blocks_and_assignments.rs  randsequence.rs  statements.rs  subroutine_call_statements.rs  timing_control_statements.rs
sv-parser-parser/src/declarations/: assertion_declarations.rs  block_item_declarations.rs  covergroup_declarations.rs  declaration_assignments.rs  declaration_lists.rs  declaration_ranges.rs  delays.rs  function_declarations.rs  interface_declarations.rs  let_declarations.rs  mod.rs  module_parameter_declarations.rs  net_and_variable_types.rs  port_declarations.rs  strengths.rs  task_declarations.rs  type_declarations.rs
sv-parser-parser/src/expressions/: concatenations.rs  expression_leftside_values.rs  expressions.rs  mod.rs  numbers.rs  operators.rs  primaries.rs  strings.rs  subroutine_calls.rs
sv-parser-parser/src/general/: attributes.rs  comments.rs  compiler_directives.rs  identifiers.rs  mod.rs
sv-parser-parser/src/instantiations/: checker_instantiation.rs  generated_instantiation.rs  interface_instantiation.rs  mod.rs  module_instantiation.rs  program_instantiation.rs
sv-parser-parser/src/preprocessor/: mod.rs  preprocessor.rs
sv-parser-parser/src/primitive_instances/: mod.rs  primitive_gate_and_switch_types.rs  primitive_instantiation_and_instances.rs  primitive_strengths.rs  primitive_terminals.rs
sv-parser-parser/src/source_text/: checker_items.rs  class_items.rs  configuration_source_text.rs  constraints.rs  interface_items.rs  library_source_text.rs  mod.rs  module_items.rs  module_parameters_and_ports.rs  package_items.rs  program_items.rs  system_verilog_source_text.rs
sv-parser-parser/src/specify_section/: mod.rs  specify_block_declaration.rs  specify_block_terminals.rs  specify_path_declarations.rs  specify_path_delays.rs  system_timing_check_command_arguments.rs  system_timing_check_commands.rs  system_timing_check_event_definitions.rs
sv-parser-parser/src/udp_declaration_and_instantiation/: mod.rs  udp_body.rs  udp_declaration.rs  udp_instantiation.rs  udp_ports.rs
sv-parser-pp/: Cargo.toml
sv-parser-pp/src/: lib.rs  preprocess.rs  range.rs
sv-parser-pp/testcases/: IEEE18002017_AnnexE_delaydirectives.sv  IEEE18002017_keywords_if2_13642005.sv  IEEE18002017_macro_argument_expansion.sv  IEEE18002017_macro_delimit_tokens.sv  IEEE18002017_macro_mix_quotes.sv  IEEE18002017_macro_noexpand_string.sv  IEEE18002017_macro_with_defaults.sv  IEEE18002017_macro_without_defaults.sv  celldefine.sv  coverage_constants.sv  default_nettype.sv  err_DefineArgNotFound.sv  err_DefineNoArgs.sv  err_DefineNotFound.sv  err_ReadUtf8.sv  escaped_identifier.sv  ifdef_predefined.sv  ifndef_undefined.sv  include_ignore.sv  include_quoted_a.sv  include_quoted_b.sv  include_quoted_c.sv  include_quoted_d.sv  include_recursive.svh  include_sameline_comment.sv  include_sameline_include.sv  include_sameline_keyword.sv  include_withindent.sv  keywords.sv  line.sv  macro_FILE.sv  macro_LINE.sv  macro_arguments.sv  macro_basic.sv  macro_comment.sv  macro_comment_embedded.sv  macro_default_empty.sv  macro_delimiters.sv  macro_identifier.sv  macro_multiline_comment.sv  (+22 more)
sv-parser-pp/testcases/expected/: IEEE18002017_keywords_m2_13642001.sv  IEEE18002017_keywords_m2_18002005.sv  IEEE18002017_macro_argument_expansion.sv  IEEE18002017_macro_delimit_tokens.sv  IEEE18002017_macro_mix_quotes.sv  IEEE18002017_macro_noexpand_string.sv  IEEE18002017_macro_with_defaults.sv  IEEE18002017_macro_without_defaults.sv  coverage_constants.sv  escaped_identifier.sv  ifdef_nested.sv  ifdef_predefined.sv  ifdef_undefined.sv  ifndef_undefined  include_include.sv  include_origin.sv  include_quoted_c.sv  include_quoted_d.sv  include_sameline_comment.sv  include_withindent.sv  macro_FILE.sv  macro_LINE  macro_LINE.sv  macro_arguments.sv  macro_backslash  macro_basic.sv  macro_comment.sv  macro_comment_embedded.sv  macro_default_empty.sv  macro_delimiters.sv  macro_identifier.sv  macro_multiline  macro_multiline_comment.sv  macro_parameters_defaultvalue  macro_parameters_dependent  macro_parameters_multiline.sv  macro_string_literal  macro_with_comment  undef.sv  undefineall.sv
sv-parser-syntaxtree/: Cargo.toml  build.rs
sv-parser-syntaxtree/src/: any_node.rs  lib.rs  special_node.rs
sv-parser-syntaxtree/src/behavioral_statements/: assertion_statements.rs  case_statements.rs  clocking_block.rs  conditional_statements.rs  continuous_assignment_and_net_alias_statements.rs  looping_statements.rs  parallel_and_sequential_blocks.rs  patterns.rs  procedural_blocks_and_assignments.rs  randsequence.rs  statements.rs  subroutine_call_statements.rs  timing_control_statements.rs
sv-parser-syntaxtree/src/declarations/: assertion_declarations.rs  block_item_declarations.rs  covergroup_declarations.rs  declaration_assignments.rs  declaration_lists.rs  declaration_ranges.rs  delays.rs  function_declarations.rs  interface_declarations.rs  let_declarations.rs  module_parameter_declarations.rs  net_and_variable_types.rs  port_declarations.rs  strengths.rs  task_declarations.rs  type_declarations.rs
sv-parser-syntaxtree/src/expressions/: concatenations.rs  expression_leftside_values.rs  numbers.rs  (+5 more)
sv-parser/benches/: parse_sv_bench.rs  parse_sv_criterion.rs
sv-parser/examples/: module_list.rs  parse_sv.rs
sv-parser/src/: ast.rs  lib.rs  parser.rs
sv-parser/testcases/: test1.sv  test2.sv
(+194 files in other folders)
