[package]
name = "sv-parser"
version = "0.1.0"
authors = ["dalance@gmail.com"]
repository = "https://github.com/dalance/sv-parser"
keywords = []
categories = []
license = "MIT"
readme = "README.md"
description = ""
edition = "2018"
build = "build.rs"

[dependencies]
nom = "5.0.0"
nom_locate = { git = "https://github.com/fflorent/nom_locate" }
str-concat = "*"
node_derive = { path = "./node_derive" }

[build-dependencies]
walkdir = "2"
regex = "1"
