[package]
name = "sv-parser-derive"
version = "0.1.0"
authors = ["dalance <dalance@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15.18", features = ["full", "fold", "parsing"] }
quote = "0.6.9"
