[package]
name = "sv-parser-error"
version = "0.6.5"
authors = ["dalance@gmail.com"]
repository = "https://github.com/dalance/sv-parser"
keywords = ["parser", "verilog", "systemverilog"]
categories = ["parsing"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
description = "Helper crate of sv-parser"
edition = "2018"

[package.metadata.release]
disable-tag = true

[dependencies]
thiserror = "1.0"
