[package]
name = "sv-parser-macros"
version = "0.13.2"
authors = ["dalance@gmail.com"]
repository = "https://github.com/dalance/sv-parser"
keywords = ["parser", "verilog", "systemverilog"]
categories = ["parsing"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
description = "Helper crate of sv-parser"
edition = "2018"

[package.metadata.release]
tag = false

[lib]
proc-macro = true
doctest = false

[dependencies]
quote = "1.0.0"
syn   = { version = "2.0.6", features = ["full", "fold", "parsing", "extra-traits"] }
