[package]
name = "sv-parser-parser"
version = "0.12.1"
authors = ["dalance@gmail.com"]
repository = "https://github.com/dalance/sv-parser"
keywords = ["parser", "verilog", "systemverilog"]
categories = ["parsing"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
description = "Helper crate of sv-parser"
edition = "2018"

[lib]
doctest = false

[package.metadata.release]
tag = false

[features]
default = []
trace   = ["nom-tracable/trace"]

[dependencies]
nom                  = "6"
nom_locate           = "3"
nom-greedyerror      = "0.3"
nom-packrat          = "0.5"
nom-recursive        = {version = "0.3", features = ["tracer128"]}
nom-tracable         = "0.7"
str-concat           = "0.2"
sv-parser-macros     = {version = "^0.12.1", path = "../sv-parser-macros"}
sv-parser-syntaxtree = {version = "^0.12.1", path = "../sv-parser-syntaxtree"}
