[package]
name = "sv-parser-pp"
version = "0.8.2"
authors = ["dalance@gmail.com"]
repository = "https://github.com/dalance/sv-parser"
keywords = ["parser", "verilog", "systemverilog"]
categories = ["parsing"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
description = "Helper crate of sv-parser"
edition = "2018"

[package.metadata.release]
disable-tag = true

[features]
default = []
trace   = ["sv-parser-parser/trace"]

[dependencies]
nom                  = "5"
nom-greedyerror      = "0.2"
sv-parser-error      = {version = "^0.8.2", path = "../sv-parser-error"}
sv-parser-parser     = {version = "^0.8.2", path = "../sv-parser-parser"}
sv-parser-syntaxtree = {version = "^0.8.2", path = "../sv-parser-syntaxtree"}
