[package]
name = "sv-parser-pp"
version = "0.10.3"
authors = ["dalance@gmail.com"]
repository = "https://github.com/dalance/sv-parser"
keywords = ["parser", "verilog", "systemverilog"]
categories = ["parsing"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
description = "Helper crate of sv-parser"
edition = "2018"

[package.metadata.release]
disable-tag = true

[features]
default = []
trace   = ["sv-parser-parser/trace"]

[dependencies]
nom                  = "6"
nom-greedyerror      = "0.3"
sv-parser-error      = {version = "^0.10.3", path = "../sv-parser-error"}
sv-parser-parser     = {version = "^0.10.3", path = "../sv-parser-parser"}
sv-parser-syntaxtree = {version = "^0.10.3", path = "../sv-parser-syntaxtree"}
