[package]
name = "sv-parser-syntaxtree"
version = "0.3.7"
authors = ["dalance@gmail.com"]
repository = "https://github.com/dalance/sv-parser"
keywords = ["parser", "verilog", "systemverilog"]
categories = ["parsing"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
description = "Helper crate of sv-parser"
edition = "2018"
build = "build.rs"

[package.metadata.release]
disable-push = true
disable-tag  = true

[dependencies]
sv-parser-macros = {version = "^0.4.0", path = "../sv-parser-macros"}

[build-dependencies]
regex   = "1"
walkdir = "2"
