[package]
name = "sv-parser"
version = "0.13.3"
authors = ["dalance@gmail.com"]
repository = "https://github.com/dalance/sv-parser"
keywords = ["parser", "verilog", "systemverilog"]
categories = ["parsing"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
description = "SystemVerilog parser library fully complient with IEEE 1800-2017"
edition = "2018"

[lib]
doctest = false

[package.metadata.release]
pre-release-replacements = [
    {file = "../README.md", search = "sv-parser = \"[a-z0-9\\.-]+\"", replace = "sv-parser = \"{{version}}\""},
    {file = "../CHANGELOG.md", search = "Unreleased", replace = "v{{version}}"},
    {file = "../CHANGELOG.md", search = "ReleaseDate", replace = "{{date}}"},
    {file = "../CHANGELOG.md", search = "Change Log", replace = "Change Log\n\n## [Unreleased](https://github.com/dalance/sv-parser/compare/v{{version}}...Unreleased) - ReleaseDate"},
]

[features]
default = []
trace   = ["sv-parser-parser/trace"]

[dependencies]
nom                  = "7"
nom-greedyerror      = "0.5"
sv-parser-error      = {version = "^0.13.3", path = "../sv-parser-error"}
sv-parser-parser     = {version = "^0.13.3", path = "../sv-parser-parser"}
sv-parser-pp         = {version = "^0.13.3", path = "../sv-parser-pp"}
sv-parser-syntaxtree = {version = "^0.13.3", path = "../sv-parser-syntaxtree"}

[dev-dependencies]
structopt = "0.3.2"
criterion = "0.5"
enquote   = "1.0"

[[bench]]
name = "parse_sv_criterion"
harness = false
